--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,25 +1,28 @@
-name: Deploy Three Spring Boot Applications with Java 21
+name: Deploy Spring Boot Application with Java 21
 
 on:
   push:
     branches:
-      - main # Executa o workflow apenas na branch principal.
+      - main
+      - develop # Inclui a branch develop para execução do workflow.
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Configuração inicial
+      # Checkout inicial
       - name: Checkout Terraform repository
         uses: actions/checkout@v3
 
+      # Configuração do Java
       - name: Set up Java 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '21' # Atualizado para Java 21
+          java-version: '21'
 
+      # Cache do Maven para acelerar builds futuros
       - name: Cache Maven repository
         uses: actions/cache@v3
         with:
@@ -28,46 +31,48 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      - name: Clone da aplicacao
-        run: |
-          # Clonar o repositório
-          git clone https://github.com/brunobucci/soat7grupo5-producao.git producao
-          cd producao
+      # Clonar o repositório da aplicação
+      - name: Clone Application Repository
+        run: git clone https://github.com/brunobucci/soat7grupo5-producao.git producao
 
-      - name: Branch Test
+      # Mudar para a branch de testes
+      - name: Checkout Test Branch
         run: |
-          # Mudar para a branch develop
           cd producao
           git checkout test
 
-      - name: Maven Clean Verify
+      # Executar os testes com cobertura
+      - name: Run Tests with Coverage
         run: |
-          # Instalar dependências e executar testes com cobertura
           cd producao
           mvn clean verify
 
-      - name: Build da aplicação
+      # Build da aplicação
+      - name: Build Application
         run: |
           cd producao
           mvn clean package -DskipTests
-          cd ..
 
-        
+      # Verificar o arquivo .jar gerado
+      - name: Verify Build Output
+        run: |
+          ls -l producao/target/
+
+      # Deploy para a instância EC2
       - name: Deploy to EC2
         env:
           AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-          AWS_HOST: ${{ secrets.AWS_HOST_PRODUCAO }} # Usando a secret específica para producao
+          AWS_HOST: ${{ secrets.AWS_HOST_PRODUCAO }}
         run: |
           # Criar arquivo temporário para a chave privada
           echo "$AWS_PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-      
+
           # Fazer o upload do arquivo .jar para a instância EC2
-          scp -o StrictHostKeyChecking=no -i private_key.pem target/*.jar ubuntu@$AWS_HOST:/home/ubuntu/
-      
+          scp -o StrictHostKeyChecking=no -i private_key.pem producao/target/*.jar ubuntu@$AWS_HOST:/home/ubuntu/
+
           # Reiniciar o serviço na instância EC2
           ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@$AWS_HOST "sudo systemctl restart producao-app"
-      
+
           # Remover a chave privada temporária
           rm -f private_key.pem
-
